// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toDiagnostic() returns an error diagnostic 1`] = `
Object {
  "category": 1,
  "messageText": "uh oh!",
}
`;

exports[`toDiagnostic() returns an error diagnostic with a target set 1`] = `
Object {
  "category": 1,
  "messageText": "uh oh!",
  "target": "companion",
}
`;
